--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,6 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
-docs/_build/
-
 # PyBuilder
 target/
 
@@ -88,3 +85,8 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# Temp files
+*~
+.#*
+#*
